examples/test/testpolicy18428.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18428
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key25: value40
      key14: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value41
          key44: value37
      podSelector:
        matchLabels:
          key47: value34
